syntax = "proto3";

package pb;

option go_package = "github.com/lushenle/simple-cache/pkg/pb";

message ExpireKeyRequest {
  string key = 1;
}

message ExpireKeyResponse {
  bool success = 1;
  bool existed = 2;
}