syntax = "proto3";

package pb;

import "google/protobuf/any.proto";

option go_package = "github.com/lushenle/simple-cache/pkg/pb";

message GetRequest {
  string key = 1;
}

message GetResponse {
  google.protobuf.Any value = 1;
  bool found = 2;
}